About.html News.html media.html

--- a/News.html
+++ b/News.html
@@ -21,7 +21,7 @@
 	</div>
 	<h1>News sources</h1>
 	<div id="wrapper1">	
-<div id="text"><p>The first person on my list is Rob "Slasher" Breslau.He is known as the pioneer of Overwatch news sources due to his 100% track record and very professional twitter page for leaks and information.He has yet to be wrong on a single leak but also does alot of reporting and leaking for other games such as LoL, dota, CS:GO, etc... I highly recommend checking out his twitter if you are interested in eSports news ,drama, and leaks <a href="https://twitter.com/Slasher"target="_blank">here!</a></p></div>
+<div id="text"><p>The first person on my list is Rob "Slasher" Breslau. He is known as the pioneer of Overwatch news sources due to his 100% track record and very professional twitter page for leaks and information. He has yet to be wrong on a single leak but also does alot of reporting and leaking for other games such as LoL, dota, CS:GO, etc... I highly recommend checking out his twitter if you are interested in eSports news ,drama, and leaks <a href="https://twitter.com/Slasher"target="_blank">here!</a></p></div>
 <div id="image"><img class="right" src="http://toplogos.ru/images/logo-quake-live.png" width="300px" height="300px"></div>
 </div>
 <br>
@@ -38,7 +38,7 @@
 <br>
 
     <div id="wrapper3">
-    	<div id="halot"><p>My last overwatch news source that i trust would be Halo of thoughts. Halo of thoughts isnt as reliable of a news source as others and has started some dramam in the past with mykl, but overall he does get most of his leaks right and isnt a bad news source at all compared to most others. I recommend checking him out <a href="https://twitter.com/haloofthoughts"target="_blank">here</a> if you like.</p></div>
+    	<div id="halot"><p>My last overwatch news source that i trust would be Halo of thoughts. Halo of thoughts isnt as reliable of a news source as others and has started some drama in the past with mykl, but overall he does get most of his leaks right and isnt a bad news source at all compared to most others. I recommend checking him out <a href="https://twitter.com/haloofthoughts"target="_blank">here</a> if you like.</p></div>
         <div id="haloi"><img src="http://3.bp.blogspot.com/-jE_1qgBGosQ/WPz62To3fdI/AAAAAAAAA58/daChYHt5XXEklx_a03UAaVR_Wiq7gTMmgCK4B/s1600/IMG_6598.JPG" width="350px" height="350px"></div>
 
 
