--- a/About.html
+++ b/About.html
@@ -27,7 +27,7 @@
 		<div id="wrapper">
 			<div id="main">
 				<h2>What is overwatch?</h2>
-				<p>Overwatch is a MMO FPS available on blizzard entertainments battle.net. Overwatch was realesed on May,24th,2016 and was a huge success at the time. Overwatch allows players to play as currently 29+ different heroes on over 19 different maps and many different game modes aswell. Overwatch is a game marketed to all players whether casual or competitive and has features including ranked play where you try hard with teammates to beat other enemy teams on rank up along the way to show your skill level at the game.</p>
+				<p>Overwatch is a MMO FPS available on blizzard entertainments battle.net. Overwatch was realesed on May,24th,2016 and was a huge success at the time. Overwatch allows players to play as currently 29+ different heroes on over 19 different maps and many different game modes aswell. Overwatch is a game marketed to all players whether casual or competitive and has features including ranked play where you try hard with teammates to beat other enemy teams and rank up along the way to show oof your skill.</p>
 			</div>
 			<div id="side"><img class="tracer" src="https://image.spreadshirtmedia.com/image-server/v1/mp/designs/1008189547,width=178,height=178/cheers-love.png" width="300px" height="300px"></div>
 		</div>
