about.html eSports.html

--- a/eSport.html
+++ b/eSport.html
@@ -74,7 +74,7 @@
             <br>
             <h2 class="et">There are one other sources of competition and pro play in overwatch but is not funded by blizzard</h2>
             <div id="wrapper">
-            	<div id="main"><p>The last source of pro play in overwatch would be jayne's tournament of future champions. This is an unfunded tournament on jayne's personal live stream he hosts that allows random teams to come together and play against anywhere from contenders teams to open division teams. This tournament is very good because its allows talent to be spotted very early and gives teams a chance to prove themselves against better teams.</p> </div>
+            	<div id="main"><p>The last source of pro play in overwatch would be jayne's tournament of future champions. This is an unfunded tournament on jayne's personal live stream that he hosts that allows random teams to come together and play against anywhere from contenders teams to open division teams. This tournament is very good because its allows talent to be spotted very early and gives teams a chance to prove themselves against better teams.</p> </div>
                 <div id="siden"><img class="xl2" src="https://liquipedia.net/commons/images/8/82/Jayne_Tournament.jpg"></div>
             </div>
 
