--- a/eSport.html
+++ b/eSport.html
@@ -59,7 +59,7 @@
            <br>
             <br>
             <div id="wrapper">
-            	<div id="main"><p>The lowest and most underrated supported overwatch tournament or the teir 3 scene would be Open Division. Open division is a massive open tournament that true upsir=sing stars can show off their potential and make a name for themselves. The top 4 teams in contenders get a chance to compete with better teams in a chance to become a contenders team. This is called contenders trials and can make or break your pro career since this is the lowerest level of overwatch that is officailly streamed by blizzard (open division is streamed by 3rd party channels only).</p></div>
+            	<div id="main"><p>The lowest and most underrated supported overwatch tournament or the teir 3 scene would be Open Division. Open division is a massive open tournament that true uprising stars can show off their potential and make a name for themselves. The top 4 teams in contenders get a chance to compete with better teams in a chance to become a contenders team. This is called contenders trials and can make or break your pro career since this is the lowerest level of overwatch that is officailly streamed by blizzard (open division is streamed by 3rd party channels only).</p></div>
                 <div id="siden"><img class="xl3" src="https://bnetcmsus-a.akamaihd.net/cms/content_folder_media/mo/MOBX0KJ9U77C1495241654229.jpg" width="425" height="300"></div>
 
             </div>
